--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>2.22.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.12.Final</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Spotitube</finalName>
